Fixed following issues: Compatibility issues to Hop 2.19 due to changes in HOP 2.19. Added Preview in GIS File Input Added functionality to create parent folder if not there Added functionality to use field as input for Filename. Only the first row is taken as input, due to plugin internal dependencies. updated some classes due to vulnerable dependencies.
This is a Quick Fix, mostly generated by KI with some manual interventions, so it should not be a final fix.